tests/snapshots/snapshot_sdk_types__envelope_run_full.snap
---
source: tests/snapshot_sdk_types.rs
expression: env
---
{
  "t": "run",
  "id": "run-fixed-001",
  "work_order": {
    "id": "[uuid]",
    "task": "Fix the login bug in auth.rs",
    "lane": "patch_first",
    "workspace": {
      "root": ".",
      "mode": "staged",
      "include": [],
      "exclude": []
    },
    "context": {
      "files": [],
      "snippets": []
    },
    "policy": {
      "allowed_tools": [],
      "disallowed_tools": [],
      "deny_read": [],
      "deny_write": [],
      "allow_network": [],
      "deny_network": [],
      "require_approval_for": []
    },
    "requirements": {
      "required": []
    },
    "config": {
      "model": "gpt-4",
      "vendor": {},
      "env": {},
      "max_budget_usd": 1.0,
      "max_turns": 10
    }
  }
}
