tests/snapshots/snapshot_sdk_types__gemini_function_call_part.snap
---
source: tests/snapshot_sdk_types.rs
expression: part
---
{
  "functionCall": {
    "name": "read_file",
    "args": {
      "path": "src/lib.rs"
    }
  }
}
