tests/snapshots/snapshot_sdk_types__gemini_function_response_part.snap
---
source: tests/snapshot_sdk_types.rs
expression: part
---
{
  "functionResponse": {
    "name": "read_file",
    "response": {
      "content": "pub fn main() {}",
      "size": 17
    }
  }
}
