tests/snapshots/snapshot_sdk_types__gemini_multi_part_content.snap
---
source: tests/snapshot_sdk_types.rs
expression: content
---
{
  "role": "user",
  "parts": [
    {
      "text": "Analyze this code:"
    },
    {
      "functionResponse": {
        "name": "read_file",
        "response": {
          "content": "fn main() {}"
        }
      }
    }
  ]
}
