tests/snapshots/snapshot_sdk_types__gemini_tool_config_any_restricted.snap
---
source: tests/snapshot_sdk_types.rs
expression: config
---
{
  "functionCallingConfig": {
    "mode": "ANY",
    "allowedFunctionNames": [
      "read_file",
      "write_file"
    ]
  }
}
