tests/snapshots/snapshot_sdk_types__ir_content_block_image.snap
---
source: tests/snapshot_sdk_types.rs
expression: block
---
{
  "type": "image",
  "media_type": "image/png",
  "data": "iVBORw0KGgoAAAANSUhEUg=="
}
