tests/snapshots/snapshot_sdk_types__ir_content_block_text.snap
---
source: tests/snapshot_sdk_types.rs
expression: block
---
{
  "type": "text",
  "text": "Hello, world!"
}
