tests/snapshots/snapshot_sdk_types__ir_content_block_thinking.snap
---
source: tests/snapshot_sdk_types.rs
expression: block
---
{
  "type": "thinking",
  "text": "Let me reason through this step by step..."
}
